Fix home header picture not displaying correctly on ios safari

--- a/src/components/Home/Header.module.css
+++ b/src/components/Home/Header.module.css
@@ -99,6 +99,7 @@
   margin: 0;
   padding: 0;
   width: 100px;
+  height: 100px;
   overflow: hidden;
 }
 
